# rust_project

./: .gitignore  Cargo.toml
clalulana_api/: .env  Cargo.toml  Clalulana_API.postman_collection.json  POSTMAN_GUIDE.md  TESTES.md
clalulana_api/migrations/: 20260321000001_create_users.sql
clalulana_api/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  response.rs  routes.rs
clalulana_api/src/cqrs/users/: commands.rs  queries.rs
clalulana_api/src/domain/: user.rs
clalulana_api/src/handlers/: auth.rs  health.rs  users.rs
clalulana_api/src/middleware/: auth.rs  mod.rs  performance.rs
clalulana_api/tests/: integration_tests.rs
clalulana_web/: .env  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  start-dev.bat  vite.config.ts
clalulana_web/src/: App.tsx  api.ts  api_client.rs  config.rs  index.css  main.rs  middleware.rs  models.rs
clalulana_web/src/components/: Auth.tsx  Health.tsx  Users.tsx
clalulana_web/src/routes/: auth.rs  dashboard.rs  mod.rs  users.rs
clalulana_web/static/css/: style.css
clalulana_web/templates/: base.html  dashboard.html  login.html  register.html  user_edit.html  users_list.html
mediatr/: Cargo.toml  README.md  howtouse.md  walkthrough.md
mediatr/src/: error.rs  lib.rs
mediatr/src/di/: container.rs  mod.rs
mediatr/src/mediator/: builder.rs  mediator.rs  mod.rs
mediatr/src/pipeline/: behavior.rs  mod.rs  pipeline.rs
mediatr/src/pipeline/behaviors/: logging.rs  mod.rs  timing.rs  validation.rs
mediatr/src/traits/: command.rs  handler.rs  mod.rs  notification.rs  query.rs  request.rs
mediatr/src/validation/: mod.rs  validator.rs
mediatr_basic_usage/: Cargo.toml
mediatr_basic_usage/src/: main.rs
mediatr_cqrs_example/: Cargo.toml
mediatr_cqrs_example/src/: main.rs
mediatr_pipeline_behaviors/: Cargo.toml
mediatr_pipeline_behaviors/src/: main.rs
mediatr_validation_example/: Cargo.toml
mediatr_validation_example/src/: main.rs
